--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ a{
 .home{
     width: 100%;
     height: 100vh; 
-    background: linear-gradient(rgba(3, 65, 50, 0.751), rgba(9, 90, 70, 0.719)), url(gambar/aaa.png);
+    background: linear-gradient(rgba(3, 65, 50, 0.751), rgba(9, 90, 70, 0.719)), url(aaa.png);
     background-size: cover;
     background-attachment:fixed ;
     background-position: center;
@@ -99,7 +99,7 @@ header{
     width: 100%;
     height: 100vh; 
     background-size: cover;
-    background-image: url(gambar/bg.png);
+    background-image: url(bg.png);
     background-position: center;
 }
 
@@ -121,7 +121,7 @@ header{
     width: 100%;
     height: 100vh; 
     background-size: cover;
-    background-image: url(gambar/bgg.png);
+    background-image: url(bgg.png);
     background-position: center;
 }
 
@@ -162,7 +162,7 @@ header{
     width: 100%;
     height: 100vh; 
     background-size: cover;
-    background-image: url(gambar/bgg.png);
+    background-image: url(bgg.png);
     background-position: center;
 }
 
