--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ header{
     width: 100%;
     height: 100vh; 
     background-size: cover;
-    background-image: url(bg.png);
+    background-image: url(gambar/bg.png);
     background-position: center;
 }
 
@@ -121,7 +121,7 @@ header{
     width: 100%;
     height: 100vh; 
     background-size: cover;
-    background-image: url(bgg.png);
+    background-image: url(gambar/bgg.png);
     background-position: center;
 }
 
@@ -162,7 +162,7 @@ header{
     width: 100%;
     height: 100vh; 
     background-size: cover;
-    background-image: url(bgg.png);
+    background-image: url(gambar/bgg.png);
     background-position: center;
 }
 
